plugins {
    id 'org.jetbrains.intellij' version '1.1.4'
    id 'java'
}

group 'com.joker'
version '1.0.1'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

intellij {
    plugins = ['com.intellij.java']
    version = '2021.2.1'
    type = 'IU'
    downloadSources = true
    updateSinceUntilBuild = false
}

test {
    useJUnitPlatform()
}

dependencies {
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED', '-Dfile.encoding=utf-8'
}